# notebook-forge

./: .gitignore  BUILD_PLAN.md  LICENSE  Makefile  NOTEBOOKLM_IMAGE_ISSUE.md  README.md  SPRINT_REPORT.md
backend/: pyproject.toml
backend/notebook_forge/: __init__.py  api.py  assets.py  blocks.py  cli.py  collection.py  config.py  db.py  domcompare.py  footer.py  groups.py  homepage.py  homepage_migration.py  importer.py  ingestion.py  migrate.py  models.py  narrative.py  narrative_migration.py  parser.py  reimport.py  renderer.py  safe_edition.py  secrets_store.py  services.py  sketch.py  sketch_gen.py  sketch_service.py
backend/notebook_forge/ingest_vendor/: __init__.py  clean.py  dates.py  extract_docx.py  extract_pdf.py  footnotes.py  model.py  polish.py  renumber.py
backend/notebook_forge/polish/: __init__.py  chunker.py  fidelity.py  runner.py  serializer.py  service.py  textmap.py
backend/notebook_forge/publish/: __init__.py  base.py  drive.py  drive_client.py  git_pages.py  local_folder.py  reports.py  (+1 more)
backend/reports/: reimport-dryrun.md
backend/templates/: index.html.j2  page.html.j2
backend/tests/: conftest.py  test_bulk_sketch.py  test_collection.py  test_data_layer.py  test_footer.py  test_groups.py  test_homepage.py  test_homepage_migration.py  test_importer.py  test_ingestion.py  test_migrate.py  test_narrative.py  test_narrative_label.py  test_narrative_migration.py  test_parser.py  test_polish.py  test_publish.py  test_reimport.py  test_renderer.py  test_reports.py  test_safe_edition.py  test_scaffold.py  test_sketch.py  test_sketch_gen.py
(+90 files in other folders)
