[project]
name = "notebook-forge"
version = "0.1.0"
description = "Notebook Forge backend — block-tree CMS for the Skitch memoirs"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sqlalchemy>=2.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "jinja2>=3.1",
    "python-slugify>=8.0",
    "keyring>=25.0",
    "pillow>=10.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.6",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# B008: `Depends(...)` in defaults is the canonical FastAPI idiom
"notebook_forge/api.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["notebook_forge"]
